refactor: changing httpservice + register

--- a/projects/authentication/src/lib/modules/register/components/register.component.html
+++ b/projects/authentication/src/lib/modules/register/components/register.component.html
@@ -30,7 +30,7 @@
                                 type="password"
                                 placeholder="Repeat your password"
                                 ngModel
-                                name="re_password"
+                                name="confirmPassword"
                                 required
                             />
                         </div>
