--- a/projects/authentication/src/lib/modules/login/components/login.component.html
+++ b/projects/authentication/src/lib/modules/login/components/login.component.html
@@ -19,22 +19,47 @@
                         *ngIf="!isLoading"
                     >
                         <div class="form-group">
-                            <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email" placeholder="Your Email" ngModel name="email" required email />
+                            <label for="email"
+                                ><i
+                                    class="zmdi zmdi-email"
+                                    [style.color]="!email.valid && email.touched ? '#cc3b49' : 'black'"
+                                ></i
+                            ></label>
+                            <input
+                                type="email"
+                                [placeholder]="
+                                    !email.valid && email.touched ? 'Please enter a valid email !' : 'Your Email'
+                                "
+                                ngModel
+                                name="email"
+                                required
+                                email
+                                #email="ngModel"
+                            />
                         </div>
                         <div class="form-group">
-                            <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                            <label for="password"
+                                ><i
+                                    class="zmdi zmdi-lock"
+                                    [style.color]="!password.valid && password.touched ? '#cc3b49' : 'black'"
+                                ></i
+                            ></label>
                             <input
                                 type="password"
-                                placeholder="Password"
+                                [placeholder]="
+                                    !password.valid && password.touched ? 'Please enter you password !' : 'Password'
+                                "
                                 ngModel
                                 name="password"
                                 required
                                 minlength="6"
+                                #password="ngModel"
                             />
                         </div>
 
-                        <div *ngIf="error" class="login-error">{{ error }}</div>
+                        <div *ngIf="error" class="AnForm-error">
+                            <i class="zmdi zmdi-alert-triangle" style="color: #cc3b49;"></i> {{ error }}
+                        </div>
 
                         <div class="form-group">
                             <input type="checkbox" name="remember-me" class="agree-term" id="remember-me" />
