refactor(auth-serve): adding more  routes

--- a/projects/authentication/src/lib/modules/login/components/login.component.html
+++ b/projects/authentication/src/lib/modules/login/components/login.component.html
@@ -6,7 +6,7 @@
                     <figure>
                         <img src="assets/auth-images/signin-image.jpg" alt="sing up image" />
                     </figure>
-                    <a href="#" class="signup-image-link">Create an account</a>
+                    <a routerLink="/register" class="signup-image-link">Create an account</a>
                 </div>
 
                 <div class="signin-form">
