--- a/projects/authentication/src/lib/modules/register/components/register.component.html
+++ b/projects/authentication/src/lib/modules/register/components/register.component.html
@@ -131,7 +131,7 @@
                         <img src="assets/auth-images/signup-image.jpg" alt="sing up image" />
                     </figure>
 
-                    <a href="#" class="signup-image-link">I am already member</a>
+                    <a routerLink="/login" class="signup-image-link">I am already member</a>
                 </div>
             </div>
         </div>
