--- a/projects/authentication/src/lib/containers/register/register-container.component.html
+++ b/projects/authentication/src/lib/containers/register/register-container.component.html
@@ -1,1 +1,22 @@
-<lib-register></lib-register>
+<div class="main">
+    <section class="signup">
+        <div class="container">
+            <div class="signup-content">
+                <div class="signup-form">
+                    <h2 class="form-title" *ngIf="!isLoading">Sign up</h2>
+                    <lib-register-form *ngIf="!isLoading"></lib-register-form>
+                </div>
+                <div class="signup-image" *ngIf="!isLoading">
+                    <figure>
+                        <img src="assets/auth-images/signup-image.jpg" alt="sing up image" />
+                    </figure>
+
+                    <a routerLink="/login" class="signup-image-link">I am already member</a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+<div *ngIf="isLoading" style="text-align: center;">
+    <lib-loading-spinner></lib-loading-spinner>
+</div>
