--- a/projects/authentication/src/lib/components/login/login-form/form.component.html
+++ b/projects/authentication/src/lib/components/login/login-form/form.component.html
@@ -1,40 +1,46 @@
-<form class="register-form" #signUpForm="ngForm" (ngSubmit)="onSubmit(signUpForm)">
+<form class="register-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="email"
             ><i
                 class="zmdi zmdi-email"
-                [style.color]="!email.valid && email.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !loginForm.get('email').valid && loginForm.get('email').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="email"
             [placeholder]="
-                !email.valid && email.touched ? 'Please enter a valid email !' : 'Your Email'
+                !loginForm.get('email').valid && loginForm.get('email').touched
+                    ? 'Please enter a valid email !'
+                    : 'Your Email'
             "
-            ngModel
             name="email"
-            required
-            email
-            #email="ngModel"
+            formControlName="email"
         />
     </div>
     <div class="form-group">
         <label for="password"
             ><i
                 class="zmdi zmdi-lock"
-                [style.color]="!password.valid && password.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !loginForm.get('password').valid && loginForm.get('password').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="password"
             [placeholder]="
-                !password.valid && password.touched ? 'Please enter you password !' : 'Password'
+                !loginForm.get('password').valid && loginForm.get('password').touched
+                    ? 'Please enter you password !'
+                    : 'Password'
             "
-            ngModel
             name="password"
-            required
-            minlength="6"
-            #password="ngModel"
+            formControlName="password"
         />
     </div>
 
@@ -54,7 +60,7 @@
             name="signin"
             class="form-submit"
             value="Log in"
-            [disabled]="!signUpForm.valid"
+            [disabled]="!loginForm.valid"
         />
     </div>
 </form>
