refactor: refactoring code

--- a/projects/authentication/src/lib/components/login-form/login-form.component.scss
+++ b/projects/authentication/src/lib/components/login-form/login-form.component.scss
@@ -1,1 +1,1 @@
-@import '../../../../../shared/src/lib/styles/authentication.style.scss';
+@import '../../../../../../src/assets/styles/auth/authentication.style.scss';
