--- a/projects/authentication/src/lib/components/register-form/register-form.component.html
+++ b/projects/authentication/src/lib/components/register-form/register-form.component.html
@@ -1,56 +1,68 @@
-<form class="register-form" #signInForm="ngForm" (ngSubmit)="onSubmit(signInForm)">
+<form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="name"
             ><i
                 class="zmdi zmdi-account material-icons-name"
-                [style.color]="!name.valid && name.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !registerForm.get('name').valid && registerForm.get('name').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="text"
-            [placeholder]="!name.valid && name.touched ? 'Please enter your name !' : 'Your name'"
-            ngModel
+            [placeholder]="
+                !registerForm.get('name').valid && registerForm.get('name').touched
+                    ? 'Please enter your name !'
+                    : 'Your name'
+            "
             name="name"
-            required
-            #name="ngModel"
+            formControlName="name"
         />
     </div>
     <div class="form-group">
         <label for="email"
             ><i
                 class="zmdi zmdi-email"
-                [style.color]="!email.valid && email.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !registerForm.get('email').valid && registerForm.get('email').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="email"
             [placeholder]="
-                !email.valid && email.touched ? 'Please enter a valid email !' : 'Your Email'
+                !registerForm.get('email').valid && registerForm.get('email').touched
+                    ? 'Please enter a valid email !'
+                    : 'Your Email'
             "
-            ngModel
             name="email"
-            required
-            email
-            #email="ngModel"
+            formControlName="email"
         />
     </div>
     <div class="form-group">
         <label for="password"
             ><i
                 class="zmdi zmdi-lock"
-                [style.color]="!password.valid && password.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !registerForm.get('password').valid && registerForm.get('password').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="password"
             [placeholder]="
-                !password.valid && password.touched ? 'Please enter a password !' : 'Password'
+                !registerForm.get('password').valid && registerForm.get('password').touched
+                    ? 'Please enter a password !'
+                    : 'Password'
             "
-            ngModel
             name="password"
-            required
-            minlength="6"
-            #password="ngModel"
+            formControlName="password"
         />
     </div>
     <div class="form-group">
@@ -58,39 +70,46 @@
             ><i
                 class="zmdi zmdi-lock-outline"
                 [style.color]="
-                    !confirmPassword.valid && confirmPassword.touched ? '#cc3b49' : 'black'
+                    !registerForm.get('confirmPassword').valid &&
+                    registerForm.get('confirmPassword').touched
+                        ? '#cc3b49'
+                        : 'black'
                 "
             ></i
         ></label>
         <input
             type="password"
             [placeholder]="
-                !confirmPassword.valid && confirmPassword.touched
+                !registerForm.get('confirmPassword').valid &&
+                registerForm.get('confirmPassword').touched
                     ? 'Please repeat your password !'
                     : 'Repeat your password'
             "
-            ngModel
             name="confirmPassword"
-            required
-            #confirmPassword="ngModel"
+            formControlName="confirmPassword"
         />
     </div>
     <div class="form-group">
         <label for="handle"
             ><i
                 class="zmdi zmdi-bookmark"
-                [style.color]="!handle.valid && handle.touched ? '#cc3b49' : 'black'"
+                [style.color]="
+                    !registerForm.get('handle').valid && registerForm.get('handle').touched
+                        ? '#cc3b49'
+                        : 'black'
+                "
             ></i
         ></label>
         <input
             type="text"
             name="handle"
-            [placeholder]="!handle.valid && handle.touched ? 'Please enter a Handle !' : 'Handle'"
-            ngModel
+            [placeholder]="
+                !registerForm.get('handle').valid && registerForm.get('handle').touched
+                    ? 'Please enter a Handle !'
+                    : 'Handle'
+            "
             name="handle"
-            required
-            minlength="4"
-            #handle="ngModel"
+            formControlName="handle"
         />
     </div>
     <div class="form-group">
@@ -111,7 +130,7 @@
             name="signup"
             class="form-submit"
             value="Register"
-            [disabled]="!signInForm.valid"
+            [disabled]="!registerForm.valid"
         />
     </div>
 </form>
