--- a/projects/authentication/src/lib/components/social-auth/social-auth.component.html
+++ b/projects/authentication/src/lib/components/social-auth/social-auth.component.html
@@ -1,4 +1,4 @@
-<span class="social-label">Or login with</span>
+<span class="social-label">{{ 'AUTH.LOGIN.LOG_WITH' | translate }}</span>
 <ul class="socials">
     <li>
         <a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a>
