refactor: refactoring code

--- a/projects/authentication/src/lib/containers/login/login-container.component.html
+++ b/projects/authentication/src/lib/containers/login/login-container.component.html
@@ -1,4 +1,4 @@
-<lib-i18ntest></lib-i18ntest>
+<lib-lang-switcher></lib-lang-switcher>
 <div class="main">
     <section class="sign-in">
         <div class="container">
