--- a/projects/authentication/src/lib/containers/register/register-container.component.html
+++ b/projects/authentication/src/lib/containers/register/register-container.component.html
@@ -1,4 +1,4 @@
-<lib-i18ntest></lib-i18ntest>
+<lib-lang-switcher></lib-lang-switcher>
 <div class="main">
     <section class="signup">
         <div class="container">
