--- a/reports/test-reporter.xml
+++ b/reports/test-reporter.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testExecutions version="1">
-    <file path="E:\My Work\Shoppable\projects\authentication\src\lib\authentication.component.spec.ts">
-        <testCase name="AuthenticationComponent should create" duration="95"/>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\services\i18n.service.spec.ts">
     </file>
-    <file path="E:\My Work\Shoppable\projects\authentication\src\lib\authentication.directive.spec.ts">
-        <testCase name="AuthenticationDirective should create component" duration="86"/>
-        <testCase name="AuthenticationDirective should capitalize text " duration="20"/>
-        <testCase name="AuthenticationDirective should change background color " duration="19"/>
-        <testCase name="AuthenticationDirective should change text text " duration="19"/>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.effects.spec.ts">
     </file>
-    <file path="E:\My Work\Shoppable\projects\authentication\src\lib\authentication.service.spec.ts">
-        <testCase name="AuthenticationService should match the right data" duration="34"/>
-        <testCase name="AuthenticationService should be created" duration="1"/>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\helpers\i18n.helper.spec.ts">
     </file>
-    <file path="E:\My Work\Shoppable\projects\Storyshots.spec.ts">
-        <testCase name="Storyshots Welcome to Storybook" duration="128"/>
-        <testCase name="Storyshots Button Text" duration="25"/>
-        <testCase name="Storyshots Button Emoji" duration="25"/>
-        <testCase name="Storyshots Button with some emoji and action" duration="24"/>
-        <testCase name="Storyshots Button button with link to another story" duration="19"/>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.facade.spec.ts">
     </file>
-    <file path="E:\My Work\Shoppable\src\Storyshots.spec.ts">
-        <testCase name="Storyshots Welcome to Storybook" duration="123"/>
-        <testCase name="Storyshots Button Text" duration="26"/>
-        <testCase name="Storyshots Button Emoji" duration="25"/>
-        <testCase name="Storyshots Button with some emoji and action" duration="28"/>
-        <testCase name="Storyshots Button button with link to another story" duration="23"/>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\services\init.service.spec.ts">
+    </file>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.reducer.spec.ts">
+    </file>
+    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\components\lang-switcher\lang-switcher.component.spec.ts">
     </file>
 </testExecutions>
