--- a/reports/test-reporter.xml
+++ b/reports/test-reporter.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testExecutions version="1">
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\services\i18n.service.spec.ts">
+    <file path="E:\My Work\Shoppable\projects\authentication\Storyshots.spec.ts">
     </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.effects.spec.ts">
+    <file path="E:\My Work\Shoppable\projects\authentication\src\lib\+store\auth.facade.spec.ts">
+        <testCase name="UserFacade should be created" duration="32"/>
+        <testCase name="UserFacade should dispatch a authActions.AUTHENTICATE_SUCCESS action when AuthSuccess is called" duration="10"/>
+        <testCase name="UserFacade should dispatch a authActions.LOGOUT action when Logout is called" duration="11"/>
+        <testCase name="UserFacade should dispatch a authActions.LOGIN_START action when Logout is called" duration="8"/>
+        <testCase name="UserFacade should dispatch a authActions.AUTHENTICATE_FAIL action when AuthFail is called" duration="7"/>
+        <testCase name="UserFacade should dispatch a authActions.SIGNUP_START action when SignupStart is called" duration="8"/>
+        <testCase name="UserFacade should dispatch a authActions.CLEAR_ERROR action when ClearError is called" duration="8"/>
+        <testCase name="UserFacade should dispatch a authActions.AUTO_LOGIN action when AutoLogin is called" duration="7"/>
     </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\helpers\i18n.helper.spec.ts">
-    </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.facade.spec.ts">
-    </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\services\init.service.spec.ts">
-    </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\+store\i18n.reducer.spec.ts">
-    </file>
-    <file path="E:\My Work\Shoppable\projects\internationalization\src\lib\components\lang-switcher\lang-switcher.component.spec.ts">
+    <file path="E:\My Work\Shoppable\projects\authentication\src\lib\+store\auth.reducer.spec.ts">
+        <testCase name="authReducer undefined action should return the default state" duration="5"/>
+        <testCase name="authReducer undefined action AUTHENTICATE `AUTHENTICATE_SUCCESS`, should add a user in the state" duration="1"/>
+        <testCase name="authReducer undefined action `AUTHENTICATE_FAIL`, should add error in the state if there is error" duration="0"/>
+        <testCase name="authReducer LOGIN/SIGNUP `LOGIN_START`, should set loading to true in state" duration="0"/>
+        <testCase name="authReducer `SIGNUP_START`, should set Loading to false in state" duration="1"/>
+        <testCase name="authReducer LOGOUT should user state to initial state" duration="0"/>
+        <testCase name="authReducer CLEAR_ERROR should reset state to initial state" duration="1"/>
+        <testCase name="authReducer AUTO_LOGIN should reset state to initial state" duration="0"/>
     </file>
 </testExecutions>
