--- a/projects/authentication/src/lib/components/login-form/login-form.component.scss
+++ b/projects/authentication/src/lib/components/login-form/login-form.component.scss
@@ -1,1 +1,10 @@
 @import '../../../../../../src/assets/styles/auth/authentication.style.scss';
+// .example-form {
+//     min-width: 150px;
+//     max-width: 500px;
+//     width: 100%;
+// }
+
+// .example-full-width {
+//     width: 100%;
+// }
