--- a/projects/authentication/src/lib/components/login-form/login-form.component.html
+++ b/projects/authentication/src/lib/components/login-form/login-form.component.html
@@ -39,6 +39,7 @@
         ></label>
         <mat-form-field appearance="fill">
             <mat-label>Enter your password</mat-label>
+
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" />
             <button
                 mat-icon-button
@@ -57,18 +58,15 @@
     </div>
 
     <div class="form-group">
-        <input type="checkbox" name="remember-me" class="agree-term" id="remember-me" />
-        <label for="remember-me" class="label-agree-term"
-            ><span><span></span></span>{{ 'AUTH.LOGIN.REMEMBER' | translate }}</label
+        <mat-checkbox
+            ><label for="remember-me" class="label-agree-term"
+                ><span><span></span></span>{{ 'AUTH.LOGIN.REMEMBER' | translate }}</label
+            ></mat-checkbox
         >
     </div>
     <div class="form-group form-button">
-        <input
-            type="submit"
-            name="signin"
-            class="form-submit"
-            value="{{ 'AUTH.LOGIN.LOG_IN' | translate }}"
-            [disabled]="!loginForm.valid"
-        />
+        <button mat-raised-button color="primary" [disabled]="!loginForm.valid">
+            {{ 'AUTH.LOGIN.LOG_IN' | translate }}
+        </button>
     </div>
 </form>
